--- a/gnome-initial-setup/pages/language/gis-language-page.ui
+++ b/gnome-initial-setup/pages/language/gis-language-page.ui
@@ -16,7 +16,7 @@
                     <property name="vexpand" bind-source="language_chooser" bind-property="visible" bind-flags="invert-boolean|sync-create"/>
                     <child>
                       <object class="GtkImage" id="logo">
-                        <property name="visible" bind-source="GisLanguagePage" bind-property="small-screen" bind-flags="invert-boolean|sync-create"/>
+                        <property name="visible">True</property>
                         <property name="margin_top">24</property>
                         <property name="pixel_size">96</property>
                         <property name="icon_name">start-here-symbolic</property>
